[package]
name = "wormhole-ibc"
version = "0.1.0"
authors = ["Wormhole Project Contributors"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []
test-interface = []

[dependencies]
wormhole-cosmwasm = { version = "0.1.0", default-features = false, features = [
    "library",
    "full",
] }
cosmwasm-std = { version = "1.5.8", features = ["ibc3"] }
cw-storage-plus = "1.2.0"
cosmwasm-schema = "1.5.8"
anyhow = "1"
schemars = "0.8.8"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
semver = "1.0.16"
thiserror = "1.0.31"
serde_wormhole.workspace = true
wormhole-sdk = { workspace = true, features = ["schemars"] }

[dev-dependencies]
hex = "0.4.3"
cw-multi-test = { version = "1.2.0" }
serde-json-wasm = "0.4"
wormhole-bindings = { version = "0.1.0", features = ["fake"] }
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
wormchain-ibc-receiver = { path = "../wormchain-ibc-receiver", features = [
    "test-interface",
] }
wormhole-ibc = { path = "../wormhole-ibc", features = ["test-interface"] }
